[project]
name = "my-website"
version = "0.1.0"
description = ""
authors = [
    {name = "Christine Chen",email = "cccyx07@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
